# ParentsAssistantBot

./: .gitignore  main.py  pyproject.toml
commands/: commands_manadger.py  password_generator.py  start.py
config/: settings.py
services/: pass_gen.py
storage/: models.py  storage_manager.py
